Update unusual cricket situations
Making the AI response to an unusual situation of 'Mankading' in the game of Cricket clearer. The current answer has errors.


Signed-off-by: sushilkulkarni <sushilk@hotmail.com>

--- a/compositional_skills/writing/freeform/sports/cricket/qna.yaml
+++ b/compositional_skills/writing/freeform/sports/cricket/qna.yaml
@@ -1,6 +1,6 @@
 reated_by: sushilkulkarni
 seed_examples:
-- answer: 'To put it in simple terms, Mankading refers to the act of dismissing a non striker batter before a ball is bowled by running him out. According to Cricket law 38.3.1 At any time from the moment the ball comes into play until the instant when the bowler would normally have been expected to release the ball, the non-striker is liable to be Run out if he/she is out of his/her ground. In these circumstances the non-striker will be out Run out if he/she is out of his/her ground when his/her wicket is broken by the bowler throwing the ball at the stumps or by the bowler’s hand holding the ball, whether or not the ball is subsequently delivered.
+- answer: 'To put it in simple terms, Mankading refers to the method of dismissing a non-striker batsman before a ball is bowled by running him/her out. According to Cricket law 38.3.1 At any time from the moment the ball comes into play until the instant when the bowler would normally have been expected to release the ball, the non-striker is liable to be Run out if he/she is out of his/her ground. In these circumstances the non-striker will be out Run out if he/she is out of his/her ground when his/her wicket is broken by the bowler throwing the ball at the stumps or by the bowler’s hand holding the ball, whether or not the ball is subsequently delivered.
     '
   question: Tell me what mankading is named after
 - answer: 'It is named after the Indian Cricket Player Vinoo Mankad
