Update unusual cricket situation
Making the AI response to an unusual situation in the game of Cricket clearer. The current answer has errors.

Signed-off-by: sushilkulkarni <sushilk@hotmail.com>

--- a/compositional_skills/writing/freeform/sports/cricket/qna.yaml
+++ b/compositional_skills/writing/freeform/sports/cricket/qna.yaml
@@ -13,4 +13,6 @@ seed_examples:
     question: Tell me what is Mankading
   - answer: 'It is named after the Indian Cricket Player Vinoo Mankad '
     question: Tell me who is Mankading named after
-task_description: ''
+  - answer: The non-striking batsman gets dismissed in a Mankading scenario
+    question: Tell me who gets out when Mankaded
+task_description: Update an unusual cricket situation
