gitignore: Add IDE folders
And also macos .DS_Store file and .tox folder.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,15 @@ dmypy.json
 
 scratch.ipynb
 
+# IDEs
+.vscode/
+.idea/
+
+# Mac personalization files
+.DS_Store
+
+# Tox envs
+.tox/
 
 # Ignore config.yaml from the cli
 config.yaml
