--- a/compositional_skills/writing/freeform/jokes/speech/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/speech/qna.yaml
@@ -6,4 +6,7 @@ seed_examples:
 - answer:
     Sleep in a car. Ker is a car, and neru is to get some sleep.
   question: What is kernel in Japanese?
+- answer:
+    It had too many problems.
+  question: Why did the math book look sad?
 task_description: a speech joke
