--- a/compositional_skills/writing/freeform/jokes/speech/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/speech/qna.yaml
@@ -9,4 +9,4 @@ seed_examples:
 - answer:
     It had too many problems.
   question: Why did the math book look sad?
-task_description: speech jokikes
+task_description: speech jokes
