corrent linting error: question formatting
Signed-off-by: Thomas <twileman@redhat.com>

--- a/compositional_skills/writing/freeform/poetry/soccer_chants/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/soccer_chants/qna.yaml
@@ -18,8 +18,7 @@ seed_examples:
       Hear United sing,
 
       Viva Ronaldo!"
-    question:
-      Write a chant that can be used by Manchester United soccer fans to celebrate an offensive winger
+    question: Write a chant that can be used by Manchester United soccer fans to celebrate an offensive winger
       named Ronaldo.
 
   - answer: "She's our striker, number nine
